--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react": "17.0.37",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
+    "autoprefixer": "^10.4.0",
     "eslint": "^8.4.1",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-next": "12.0.7",
@@ -32,7 +33,9 @@
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.0",
+    "postcss": "^8.4.5",
     "prettier": "^2.5.1",
+    "tailwindcss": "^3.0.2",
     "typescript": "4.5.3"
   }
 }
