--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "clsx": "^1.1.1",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
+    "@next/eslint-plugin-next": "^12.0.7",
     "@types/node": "16.11.12",
     "@types/react": "17.0.37",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
@@ -33,9 +35,19 @@
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.0",
+    "lint-staged": ">=10",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "tailwindcss": "^3.0.2",
     "typescript": "4.5.3"
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx}": [
+      "eslint '*/**/*.{ts,tsx}' --fix",
+      "prettier --write ."
+    ],
+    "src/**/*.{json,css,scss,md,mdx,js}": [
+      "prettier --write ."
+    ]
   }
 }
