--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lint-staged": ">=10",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.3",
     "tailwindcss": "^3.0.2",
     "typescript": "4.5.3"
   },
