--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,10 @@
 {
-  "semi": true,
+  "semi": false,
   "trailingComma": "all",
   "singleQuote": true,
+  "jsxSingleQuote": false,
   "printWidth": 80,
   "tabWidth": 2,
+  "endOfLine": "lf",
   "tailwindConfig": "./tailwind.config.js"
 }
