--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "autoprefixer": "10.4.7",
     "eslint": "8.14.0",
     "eslint-config-airbnb": "19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-next": "12.1.6",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.5.1",
@@ -41,13 +42,5 @@
     "prettier-plugin-tailwindcss": "0.1.10",
     "tailwindcss": "3.0.24",
     "typescript": "4.6.4"
-  },
-  "lint-staged": {
-    "src/**/*.{ts,tsx}": [
-      "eslint '*/**/*.{ts,tsx}' --cache --fix"
-    ],
-    "src/**/*.{ts,tsx,json,css,scss,md,mdx,js}": [
-      "prettier --write ."
-    ]
   }
 }
